src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo Inactivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BigDeals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Cycle__c</fullName>
        <label>Buying Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness of Needs</fullName>
                </value>
                <value>
                    <fullName>Assessments of Alternatives</fullName>
                </value>
                <value>
                    <fullName>Alleviation of Risks</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Achievements of Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIF_Cliente__c</fullName>
        <label>Id. Fiscal Cliente</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Win_Probability__c</fullName>
        <inlineHelpText>= S (FCV * win probability) / S Calculated FCV
Is the probability considered for commercial dashboard and reporting
Possible Values: Calculated field, depending on the opportunity status and sub status, in %
Filled in by: Calculated Automatically</inlineHelpText>
        <label>Campo Inactivo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cargo_recurrente_anterior__c</fullName>
        <label>Recurrente mensual contrato actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ciclo_ventas__c</fullName>
        <label>Ciclo ventas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duracion_proyecto_meses__c</fullName>
        <label>Duracion proyecto (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimaci_n_Ingresos_primeros_12_meses__c</fullName>
        <formula>(Unique_Charges__c + Monthly_Charges__c * IF( contract_duration_months__c &gt;= 12, 12,contract_duration_months__c) )* Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Totales primeros 12 meses (pond</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Billing_Start_Date__c</fullName>
        <label>Inicio Facturación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_FCV_Calculated__c</fullName>
        <description>Field to calculate the sum of Estimated in Suboportunities</description>
        <inlineHelpText>Adding up the estimated FCV of the sub opportunities win or in progress (not loss or cancelled)
Is the FCV considered for commercial dashboard and reporting
Posible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>Campo Inactivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_FCV__c</fullName>
        <description>Estimated by the account manager in early stages of the opportunity (m€)</description>
        <inlineHelpText>The account manager indicates an estimation of the total value of the project.
Posible Values: Free field in €
Filled in by: The account manager.</inlineHelpText>
        <label>Campo Inactivo</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Year_End_Revenue__c</fullName>
        <label>Ingresos Totales año fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_end_of_contract__c</fullName>
        <label>Fecha estimada de cierre de contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_Plan_Comercial__c</fullName>
        <label>Fecha Fin Plan Comercial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_estimada_aceptacion__c</fullName>
        <label>Fecha estimada aceptacion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FourPlanning_Reto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FourPlanning Reto</label>
        <referenceTo>FourPlanning_Reto__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Contract_Value__c</fullName>
        <label>Campo Inactivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gestion_del_Big_Deal__c</fullName>
        <formula>IF(  BigDeals__c == true,
HYPERLINK(&quot;/apex/certa_scp__opportunityBigDeal?id=&quot;+Id, &quot;Acceder&quot;),
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gestión del Big Deal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingr_Brutos_ponderados_1_s_12_meses__c</fullName>
        <formula>Unique_Charges__c + Monthly_Charges__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Totales primeros 12 meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingr_Netos_A_o_fiscal__c</fullName>
        <formula>Ingresos_Netos_a_o_fiscal__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Netos año fiscal (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingr_netos_Primeros_12_meses__c</fullName>
        <formula>Ingr_Brutos_ponderados_1_s_12_meses__c - Cargo_recurrente_anterior__c *12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Netos primeros 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_Netos_PONDERADOS_1_s_12m__c</fullName>
        <formula>Probability * Ingr_netos_Primeros_12_meses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Netos primeros 12 meses (pond.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_Netos_a_o_fiscal__c</fullName>
        <formula>Unique_Charges__c +( Monthly_Charges__c - Cargo_recurrente_anterior__c )/30 * (date(2013,12,31)- Estimated_Billing_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Netos año fiscal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Big_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Big Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ingreso recurrente mensual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nav_Certa__c</fullName>
        <label>Nav Certa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notas_adicionales__c</fullName>
        <label>Notas adicionales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probabilidad_de_exito_Certa__c</fullName>
        <label>Probabilidad de exito Certa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Forecasted_FCV__c</fullName>
        <description>Field in the header of a opportunity. It is based in 2 fields calculated via trigger and sums in the subopportunities</description>
        <formula>Estimated_FCV_Calculated__c * Calculated_Win_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Calculated FCV * calculated win probability
Possible Values: Calculated field in €.
Filled in by: Calculated automatically.</inlineHelpText>
        <label>Campo Inactivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Campo Inactivo</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Charges__c</fullName>
        <label>Ingreso por única vez</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsold_Pipeline__c</fullName>
        <formula>Valor_Total_del_Contrato_calculado__c*Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV) (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Total_Contrato_Venta_Neta__c</fullName>
        <formula>Valor_Total_del_Contrato_calculado__c - Cargo_recurrente_anterior__c * contract_duration_months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venta Neta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_Total_del_Contrato_calculado__c</fullName>
        <formula>Monthly_Charges__c * contract_duration_months__c + Unique_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor total del Contrato (FCV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <label>Value Proposition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Venta_Neta_PONDERADA__c</fullName>
        <formula>Probability * Valor_Total_Contrato_Venta_Neta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venta Neta (pond.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Estimated_Year_End_Revenue__c</fullName>
        <formula>Estimated_Year_End_Revenue__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingresos Totales año fiscal (pond.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>contract_duration_months__c</fullName>
        <label>Duración del contrato (meses)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>linea_de_negocio__c</fullName>
        <label>linea de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Movil</fullName>
                </value>
                <value>
                    <fullName>Convergente</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Servicios Internacionales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>snapshot__c</fullName>
        <formula>HYPERLINK(&quot;/apex/certa_scp__OpportunitySnapshot?id=&quot;+Id, &quot;Snapshot&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot</label>
        <type>Text</type>
    </fields>
</CustomObject>